[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/SpaceshipBody.gd" type="Script" id=1]
[ext_resource path="res://assets/Spaceship-shooter-environment/spritesheets/playership/tile000.png" type="Texture" id=2]
[ext_resource path="res://assets/Spaceship-shooter-environment/spritesheets/playership/tile001.png" type="Texture" id=3]
[ext_resource path="res://assets/Spaceship-shooter-environment/spritesheets/playership/tile002.png" type="Texture" id=4]
[ext_resource path="res://assets/Spaceship-shooter-environment/spritesheets/playership/tile003.png" type="Texture" id=5]
[ext_resource path="res://assets/Spaceship-shooter-environment/spritesheets/playership/tile004.png" type="Texture" id=6]
[ext_resource path="res://assets/Spaceship-shooter-environment/spritesheets/playership/tile005.png" type="Texture" id=7]
[ext_resource path="res://assets/Spaceship-shooter-environment/spritesheets/playership/tile006.png" type="Texture" id=8]
[ext_resource path="res://assets/Spaceship-shooter-environment/spritesheets/playership/tile007.png" type="Texture" id=9]
[ext_resource path="res://assets/Spaceship-shooter-environment/spritesheets/playership/tile008.png" type="Texture" id=10]
[ext_resource path="res://assets/Spaceship-shooter-environment/spritesheets/playership/tile009.png" type="Texture" id=11]
[ext_resource path="res://assets/Space/particles.png" type="Texture" id=12]
[ext_resource path="res://assets/Space/_downloadfiles_wallpapers_7680_4320_digital_space_universe_4k_8k_16840.jpg" type="Texture" id=13]
[ext_resource path="res://assets/Space/planet.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 64.0

[node name="SpaceRoot" type="Node2D"]

[node name="SpaceshipBody" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( 512, 300 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceshipBody"]
position = Vector2( 0, 10 )
shape = SubResource( 1 )

[node name="SpaceshipAnimation" type="AnimatedSprite" parent="SpaceshipBody"]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "Idle"
frame = 8
playing = true
flip_v = true

[node name="Camera2D" type="Camera2D" parent="SpaceshipBody"]
current = true
smoothing_speed = 10.0
drag_margin_left = 0.5
drag_margin_top = 0.5
drag_margin_right = 0.5
drag_margin_bottom = 0.5

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true
offset = Vector2( 512, 300 )
transform = Transform2D( 1, 0, 0, 1, 512, 300 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1

[node name="particles" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
z_index = 1
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 0, 0, 76800, 43200 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -1
motion_scale = Vector2( 0.1, 0.1 )

[node name="_downloadfiles_wallpapers_7680_4320_digital_space_universe_4k_8k_16840" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 13 )

[node name="UICanvas" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="SpeedLabel" type="RichTextLabel" parent="UICanvas"]
margin_left = 20.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 40.0
tab_size = 8
text = "SPEED:"
scroll_active = false

[node name="RotationLabel" type="RichTextLabel" parent="UICanvas"]
margin_left = 20.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 60.0
tab_size = 8
text = "ROTATION:"
scroll_active = false

[node name="SpeedValue" type="RichTextLabel" parent="UICanvas"]
margin_left = 66.0
margin_top = 20.0
margin_right = 290.0
margin_bottom = 40.0
text = "0"

[node name="RotationValue" type="RichTextLabel" parent="UICanvas"]
margin_left = 96.0
margin_top = 40.0
margin_right = 270.0
margin_bottom = 60.0
text = "0"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )
